# real-time-DDos-detector

ddos_pred_service/: .env.localdocker  .env.secrets  Dockerfile  README.md  pyproject.toml
ddos_pred_service/app/: main.py
ddos_pred_service/app/api/v1/: __init__.py
ddos_pred_service/app/api/v1/endpoints/: ddos_pred.py
ddos_pred_service/app/core/: config.py  exceptions.py  logging.conf
ddos_pred_service/app/model/: session.py
ddos_pred_service/app/repositories/: ddos_pred.py
ddos_pred_service/app/schemas/: schema.py
local-configs/postgres/: init.sql
notebooks/: converting_building_plan_to_network_graph.ipynb  ddos-prediction-model.ipynb  network.html
