[tool.poetry]
name = "ddos_pred_service"
version = "0.1.0"
description = ""
authors = ["Michael Dubem <michaeligbomezie@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.4"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.9.2"
asyncpg = "^0.30.0"
databases = "^0.9.0"
pydantic-settings = "^2.6.1"
load-dotenv = "^0.1.0"
pyjwt = "^2.9.0"
httpx = "^0.27.2"
protobuf = "^5.29.1"
redis = "^5.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
pytest-dependency = "^0.6.0"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
